--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+#数据源
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/smbms?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+#持久化类基包配置
+mybatis.type-aliases-package=com.manage.hr.dao
+#mapper文件的位置
+mybatis.mapper-locations=classpath:dao/*Mapper.xml
