--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/company?useSSL=false&serverTim
 spring.datasource.username=root
 spring.datasource.password=root
 #持久化类基包配置
-mybatis.type-aliases-package=com.manage.hr.dao
+mybatis.type-aliases-package=com.manage.hr.entity
 #mapper文件的位置
 mybatis.mapper-locations=classpath:dao/*Mapper.xml
