完成salaryItem功能，优化了controller、serviceImpl代码，原有html页面变更为salaryItem2.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=root
 mybatis.type-aliases-package=com.manage.hr.entity
 #mapper文件的位置
 mybatis.mapper-locations=classpath:dao/*Mapper.xml
+#显示sql
+logging.level.com.manage.hr.dao = debug
