--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-logging.level.org.springframework.stereotype.Repository=debug
 #数据源
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/company?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=111111
+spring.datasource.password=root
 #持久化类基包配置
 mybatis.type-aliases-package=com.manage.hr.entity
 #mapper文件的位置
