--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,14 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/company?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1111
 #持久化类基包配置
 mybatis.type-aliases-package=com.manage.hr.entity
 #mapper文件的位置
 mybatis.mapper-locations=classpath:dao/*Mapper.xml
 #显示sql
 logging.level.com.manage.hr.dao = debug
+#文件存储路径
+web.upload-path=D:/upload/
+spring.mvc.static-path-pattern=/**
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/static,classpath:/resources/,file:${web.upload-path}
