--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #数据源
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/company?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/company?useSSL=false&serverTimezone=UTC&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=root
 #持久化类基包配置
